# eule

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
caddy/: Caddyfile
config/: global.yaml
config/bots/: askuos.yaml  assistant.yaml  campus-search.yaml  echo.yaml  it-helpdesk.yaml  it-servicedesk.yaml
design/: README.md  wolke-widget.dc.html  wolke-widget.standalone.html
docs/: 00-overview.md  01-protocol.md  02-dual-api.md  03-registry.md  04-node-contract.md  05-accessibility.md  06-integration-and-tests.md  07-deployment.md  08-integration-scenarios.md  09-adding-a-bot.md  BUILD_PLAN.md
gateway/: .dockerignore  Dockerfile  pyproject.toml
gateway/app/: cli.py  main.py
gateway/app/api/: native.py
gateway/app/auth/: keycloak.py
gateway/app/graphs/: _shared.py  echo.py  emit.py  factory.py  it_helpdesk.py  it_servicedesk.py  model.py  passthrough.py  registry.py  router.py  skeleton.py  tool_agent.py
gateway/app/mcp/: client.py  transport.py
gateway/app/registry/: loader.py  models.py  registry.py  theme.py  validation.py
gateway/app/runtime/: context.py  events.py  metrics.py  ratelimit.py  runner.py  sessions.py
gateway/tests/: conftest.py  test_abuse_t9.py  test_askuos_9a.py  test_auth_t2.py  test_boot_prewarm.py  test_bootstrap_config.py  test_context_t12.py  test_env_coverage.py  test_fragment_dispatch.py  test_graph_params_check14.py  test_guard_classifier.py  test_health.py  test_it_helpdesk.py  test_it_servicedesk.py  test_mcp_credentials.py  test_mcp_t4.py  test_mcp_transport.py  test_metrics_step11.py  test_model_client.py  test_model_client_e2e.py  test_passthrough.py  test_protocol_t1.py  test_request_validation_5a.py  test_review_fixes.py  test_router_t11.py  test_sessions_t8.py  test_shared_helpers.py  test_sources_message_id.py  test_theme_contrast.py  test_tool_agent.py  test_validation.py
gateway/tests/conformance/: test_t7_all_bots.py
widget/: .dockerignore  Dockerfile  dev-stub.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  standalone.html  tsconfig.json  vite.config.ts
widget/deploy/: demo.html  standalone.html
widget/src/: a11y.ts  dom.ts  i18n.ts  icons.ts  index.ts  persist.ts  protocol.ts  render.ts  sse.ts  styles.ts  theme.ts  widget.ts
widget/tests/: a11y-announce.test.ts  persist.test.ts  setup.ts  sse.test.ts  theme.test.ts
widget/tests/e2e/: a11y.spec.ts  actions.spec.ts  auth.spec.ts  context.spec.ts  fixtures.ts  (+6 more)
