[project]
name = "scoped-bots-gateway"
version = "0.1.0"
description = "Scoped AI Support Bots — FastAPI gateway (registry, graph runner, SSE)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
# `python -m app.cli validate-config config/` is the canonical invocation (see CLAUDE.md).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
# LangGraph/LangChain ship partial stubs; don't fail strict mode on their internals.
[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain_core.*"]
ignore_missing_imports = true
